// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Contrib] components/<Tags /> should match snapshot 1`] = `
<div>
  <div
    class="sc-bdVaJa sc-bwzfXH Tags__Container-sc-9wg2t-0 kGdxZz"
  >
    <input
      class="Input___Input-l1y0rz-1 didSAw"
      placeholder="Commencez à taper le nom du tag"
    />
    <div
      class="sc-bdVaJa sc-bwzfXH Tags__SelectedTags-sc-9wg2t-1 gNdWxU"
    >
      <div
        class="sc-bdVaJa sc-bwzfXH Tag__Container-lc1n3o-0 dVwbtb"
      >
        <span
          class="Tag__Text-lc1n3o-1 dtXAeC"
        >
          A Tag
        </span>
        <img
          alt="Bouton supprimant le tag A Tag"
          class="Tag__Button-lc1n3o-2 jbGhej"
          src="[object Object]"
        />
      </div>
      <div
        class="sc-bdVaJa sc-bwzfXH Tag__Container-lc1n3o-0 dVwbtb"
      >
        <span
          class="Tag__Text-lc1n3o-1 dtXAeC"
        >
          Another Tag
        </span>
        <img
          alt="Bouton supprimant le tag Another Tag"
          class="Tag__Button-lc1n3o-2 jbGhej"
          src="[object Object]"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`[Contrib] components/<Tags /> without \`isEditable\` should match snapshot 1`] = `
<div>
  <div
    class="sc-bdVaJa sc-bwzfXH Tags__Container-sc-9wg2t-0 kGdxZz"
  >
    <div
      class="sc-bdVaJa sc-bwzfXH Tags__SelectedTags-sc-9wg2t-1 gNdWxU"
    >
      <div
        class="sc-bdVaJa sc-bwzfXH Tag__Container-lc1n3o-0 dVwbtb"
      >
        <span
          class="Tag__Text-lc1n3o-1 dtXAeC"
        >
          A Tag
        </span>
        <img
          alt="Bouton supprimant l'étiquette A Tag"
          class="Tag__Button-lc1n3o-2 jbGhej"
          src="[object Object]"
        />
      </div>
      <div
        class="sc-bdVaJa sc-bwzfXH Tag__Container-lc1n3o-0 dVwbtb"
      >
        <span
          class="Tag__Text-lc1n3o-1 dtXAeC"
        >
          Another Tag
        </span>
        <img
          alt="Bouton supprimant l'étiquette Another Tag"
          class="Tag__Button-lc1n3o-2 jbGhej"
          src="[object Object]"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`[Contrib] components/<Tags /> without optional props should match snapshot 1`] = `
<div>
  <div
    class="sc-bdVaJa sc-bwzfXH Tags__Container-sc-9wg2t-0 kGdxZz"
  >
    <input
      class="Input___Input-l1y0rz-1 didSAw"
      placeholder="Commencez à taper le nom de l'étiquette"
    />
    <div
      class="sc-bdVaJa sc-bwzfXH Tags__SelectedTags-sc-9wg2t-1 gNdWxU"
    />
  </div>
</div>
`;
